objects/Gong__Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Count__c</fullName>
        <label>Tracker Occurrences (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__HasCompetitor__c</fullName>
        <formula>Gong__Tracker_Phrase__c !=&quot;None&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasCompetitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gong__Tracker_Occurrences__c</fullName>
        <label>Tracker Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Tracker_Phrase__c</fullName>
        <label>Tracker Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Value__c</fullName>
        <label>Tracker Phrase (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tracker</label>
    <nameField>
        <label>Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>